--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "saitamasama/memeserver",
+  "name": "saitama-kun/memeserver",
   "description": "A webserver which can be used to serve memes better (I dunno if it can be)",
   "version": "0.0.1-alpha",
   "keywords": ["webserver", "php-server", "meme"],
@@ -15,6 +15,6 @@
     }
   },
   "require": {
-    "doctrine/annotations": "^1.3"
+    "php": ">=7.1"
   }
 }
